@@ -1,5 +1,8 @@
 pidgin-lwqq : the webqq protocol for pidgin based on lwqq.
 
+dev (08/08/2012):
+	* new feature: support change buddy markname
+
 master (08/04/2012):
 	* face full support
 	* introduce new async event/evset api
